# igarss-multi-temporal-hotspot-detection

./: .gitignore  Makefile  README.md  init.py  pyproject.toml  requirements.txt
docs/: index.md
scripts/: convert_native_with_datatailor.py  create_dataset.py  create_dataset_numpy.py  create_dataset_with_landcover.py  run_convert.sh  sample_dataset.py  split_dataset.py
scripts/download_data/: download_meteosat.py  download_meteosat_specific_effis_fire.py  download_meteosat_using_datatailor.py  download_meteosat_using_satip.py
src/: datamodule.py  prestomodule.py  train.py
src/mthd/: __init__.py  classifier.py  dataset.py  masking.py  presto.py  train.py
src/project_name/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_base.py
